--- a/Área de Trabalho/MarcaAí/package.json
+++ b/Área de Trabalho/MarcaAí/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "next": "^14.2.0",
     "react": "^18.3.0",
