--- a/Área de Trabalho/MarcaAí/package.json
+++ b/Área de Trabalho/MarcaAí/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@aldabil/react-scheduler": "^3.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -33,7 +34,9 @@
     "next": "14.2.35",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18",
+    "react-is": "^19.2.4",
     "react-joyride": "^2.7.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
