--- a/Área de Trabalho/MarcaAí/package.json
+++ b/Área de Trabalho/MarcaAí/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "jose": "^5.2.3",
+    "react-day-picker": "^8.10.1",
     "lucide-react": "^0.344.0",
     "next": "14.2.35",
     "next-themes": "^0.2.1",
